Fix table spacing e.g. /widgets/all-widgets

--- a/resources/css/base/elements/tables.css
+++ b/resources/css/base/elements/tables.css
@@ -85,7 +85,7 @@
         text-align: left;
     }
 
-    &tbody tr {
+    .c-table tbody tr {
         &:first-child td {
             padding-block-start: var(--spacing-lg);
         }
